--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
-    <title>美乐乐----</title>
-=======
-    <title>美乐乐 ------</title>
->>>>>>> shanshan
+    <title>美乐乐</title>
     <link rel="stylesheet" href="./styles/app.css">
 </head>
 <body>
