--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <script src="./libs/bscroll.min.js"></script>
     <script src="./libs/zepto.min.js"></script>
     <script src="./libs/handlebars.runtime-v4.0.12.js"></script>
     <script src="./scripts/app.js"></script>
