--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>美乐乐</title>
     <link rel="stylesheet" href="./styles/app.css">
+    <link rel="stylesheet" href="./libs/layermoblie.css">
 </head>
 <body>
     <div id="root"></div>
+    <script src="./libs/layermoblie.js"></script>
     <script src="./libs/bscroll.min.js"></script>
     <script src="./libs/zepto.min.js"></script>
     <script src="./libs/handlebars.runtime-v4.0.12.js"></script>
